--- a/guide.ipynb
+++ b/guide.ipynb
@@ -331,16 +331,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9d1f46e9-cb2a-48be-b4f3-3c7b08706c06",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting optuna\n",
+      "  Downloading optuna-4.4.0-py3-none-any.whl.metadata (17 kB)\n",
+      "Collecting alembic>=1.5.0 (from optuna)\n",
+      "  Downloading alembic-1.16.4-py3-none-any.whl.metadata (7.3 kB)\n",
+      "Collecting colorlog (from optuna)\n",
+      "  Downloading colorlog-6.9.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: numpy in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from optuna) (2.2.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from optuna) (24.2)\n",
+      "Collecting sqlalchemy>=1.4.2 (from optuna)\n",
+      "  Downloading sqlalchemy-2.0.42-cp311-cp311-win_amd64.whl.metadata (9.8 kB)\n",
+      "Requirement already satisfied: tqdm in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from optuna) (4.67.1)\n",
+      "Requirement already satisfied: PyYAML in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from optuna) (6.0.2)\n",
+      "Collecting Mako (from alembic>=1.5.0->optuna)\n",
+      "  Downloading mako-1.3.10-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.12 in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from alembic>=1.5.0->optuna) (4.13.2)\n",
+      "Collecting greenlet>=1 (from sqlalchemy>=1.4.2->optuna)\n",
+      "  Downloading greenlet-3.2.4-cp311-cp311-win_amd64.whl.metadata (4.2 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\정주환\\appdata\\roaming\\python\\python311\\site-packages (from colorlog->optuna) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in c:\\anaconda3\\envs\\groom\\lib\\site-packages (from Mako->alembic>=1.5.0->optuna) (3.0.2)\n",
+      "Downloading optuna-4.4.0-py3-none-any.whl (395 kB)\n",
+      "Downloading alembic-1.16.4-py3-none-any.whl (247 kB)\n",
+      "Downloading sqlalchemy-2.0.42-cp311-cp311-win_amd64.whl (2.1 MB)\n",
+      "   ---------------------------------------- 0.0/2.1 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 2.1/2.1 MB 11.9 MB/s eta 0:00:00\n",
+      "Downloading greenlet-3.2.4-cp311-cp311-win_amd64.whl (299 kB)\n",
+      "Downloading colorlog-6.9.0-py3-none-any.whl (11 kB)\n",
+      "Downloading mako-1.3.10-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: Mako, greenlet, colorlog, sqlalchemy, alembic, optuna\n",
+      "\n",
+      "   ---------------------------------------- 0/6 [Mako]\n",
+      "   ---------------------------------------- 0/6 [Mako]\n",
+      "   ---------------------------------------- 0/6 [Mako]\n",
+      "   ---------------------------------------- 0/6 [Mako]\n",
+      "   ------ --------------------------------- 1/6 [greenlet]\n",
+      "   ------ --------------------------------- 1/6 [greenlet]\n",
+      "   ------ --------------------------------- 1/6 [greenlet]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------- ------------------- 3/6 [sqlalchemy]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   -------------------------- ------------- 4/6 [alembic]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   --------------------------------- ------ 5/6 [optuna]\n",
+      "   ---------------------------------------- 6/6 [optuna]\n",
+      "\n",
+      "Successfully installed Mako-1.3.10 alembic-1.16.4 colorlog-6.9.0 greenlet-3.2.4 optuna-4.4.0 sqlalchemy-2.0.42\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~lotly (C:\\Anaconda3\\envs\\groom\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~lotly (C:\\Anaconda3\\envs\\groom\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~lotly (C:\\Anaconda3\\envs\\groom\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install optuna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "285d778f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # ========= 1) 커스텀 SMAPE (feval) =========\n",
+    "# # xgb.train용 커스텀 평가 함수: (name, value) 반환, is_higher_better=False\n",
+    "# def feval_smape(preds, dtrain):\n",
+    "#     labels = dtrain.get_label()\n",
+    "#     # labels, preds 모두 log1p 스케일로 들어오므로 원스케일로 복원\n",
+    "#     preds = np.expm1(preds)\n",
+    "#     labels = np.expm1(labels)\n",
+    "#     v = 2.0 * np.abs(preds - labels) / (np.abs(preds) + np.abs(labels) + 1e-9)\n",
+    "#     score = float(np.mean(v) * 100.0)\n",
+    "#     return (\"smape\", score)\n",
+    "\n",
+    "# # (외부 평가용) 배열-배열 SMAPE\n",
+    "# def smape(y_true, y_pred):\n",
+    "#     v = 2.0 * np.abs(y_pred - y_true) / (np.abs(y_true) + np.abs(y_pred) + 1e-9)\n",
+    "#     return float(np.mean(v) * 100.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49abc098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best_params_dict = {}\n",
+    "\n",
+    "# for building_type in type_list:\n",
+    "#     print(f\"\\n================ HPO for Building Type: {building_type} ================\\n\")\n",
+    "\n",
+    "#     # 데이터 준비 (원핫까지)\n",
+    "#     x_opt = X[X.building_type == building_type].copy()\n",
+    "#     y_opt = Y[Y.building_type == building_type]['power_consumption'].copy()\n",
+    "#     x_opt.drop(['building_type'], axis=1, inplace=True)\n",
+    "#     x_opt = pd.get_dummies(x_opt, columns=['building_number'], drop_first=False)\n",
+    "\n",
+    "#     # numpy float32 권장\n",
+    "#     X_np = x_opt.values.astype(np.float32)\n",
+    "#     y_np = y_opt.values.astype(np.float32)\n",
+    "\n",
+    "#     splitter = TimeSeriesSplit(n_splits=3)  # 필요 시 KFold로 교체\n",
+    "\n",
+    "#     def objective(trial):\n",
+    "#         # 탐색공간\n",
+    "#         mbin = trial.suggest_int(\"max_bin\", 192, 384)\n",
+    "#         params = {\n",
+    "#             \"objective\": \"reg:squarederror\",          # obj는 아래 xgb.train에서 교체됨\n",
+    "#             \"eta\": trial.suggest_float(\"eta\", 0.01, 0.2, log=True),\n",
+    "#             \"max_depth\": trial.suggest_int(\"max_depth\", 3, 10),\n",
+    "#             \"min_child_weight\": trial.suggest_int(\"min_child_weight\", 1, 12),\n",
+    "#             \"subsample\": trial.suggest_float(\"subsample\", 0.6, 1.0),\n",
+    "#             \"colsample_bytree\": trial.suggest_float(\"colsample_bytree\", 0.6, 1.0),\n",
+    "#             \"reg_lambda\": trial.suggest_float(\"reg_lambda\", 1e-8, 10.0, log=True),\n",
+    "#             \"reg_alpha\": trial.suggest_float(\"reg_alpha\", 1e-8, 10.0, log=True),\n",
+    "\n",
+    "#             # GPU 최적화 (xgboost 3.x)\n",
+    "#             \"device\": \"cuda\",\n",
+    "#             \"tree_method\": \"hist\",\n",
+    "#             \"predictor\": \"gpu_predictor\",\n",
+    "#             \"single_precision_histogram\": True,\n",
+    "\n",
+    "#             # Booster 쪽도 동일 max_bin 사용\n",
+    "#             \"max_bin\": mbin,\n",
+    "#         }\n",
+    "#         alpha = trial.suggest_float(\"alpha\", 0.5, 2.0)  # ← 너의 weighted_mse()용 하이퍼\n",
+    "\n",
+    "#         fold_scores = []\n",
+    "#         for tr_idx, va_idx in splitter.split(X_np):\n",
+    "#             X_tr, X_va = X_np[tr_idx], X_np[va_idx]\n",
+    "#             y_tr, y_va = y_np[tr_idx], y_np[va_idx]\n",
+    "\n",
+    "#             # QuantileDMatrix (train은 max_bin 지정, valid는 ref 공유 + 명시)\n",
+    "#             dtrain = xgboost.QuantileDMatrix(X_tr, label=y_tr, max_bin=mbin)\n",
+    "#             dvalid = xgboost.QuantileDMatrix(X_va, label=y_va, ref=dtrain, max_bin=mbin)\n",
+    "\n",
+    "#             prune_cb = XGBoostPruningCallback(trial, \"validation_0-custom_smape\")\n",
+    "\n",
+    "#             booster = xgboost.train(\n",
+    "#                 params=params,\n",
+    "#                 dtrain=dtrain,\n",
+    "#                 num_boost_round=5000,\n",
+    "#                 evals=[(dvalid, \"validation_0\")],\n",
+    "#                 # 커스텀 목적함수/지표\n",
+    "#                 obj=weighted_mse(alpha),     # ←  weighted MSE 사용\n",
+    "#                 custom_metric=custom_smape,  # ←  SMAPE 사용(낮을수록 좋음)\n",
+    "#                 maximize=False,\n",
+    "#                 early_stopping_rounds=100,\n",
+    "#                 verbose_eval=False,\n",
+    "#                 callbacks=[prune_cb],\n",
+    "#             )\n",
+    "\n",
+    "#             preds = booster.predict(dvalid, iteration_range=(0, booster.best_iteration + 1))\n",
+    "#             fold_scores.append(smape(y_va, preds))  # 외부에서도 SMAPE로 평균\n",
+    "\n",
+    "#         return float(np.mean(fold_scores))\n",
+    "\n",
+    "#     # Study (프루닝 조금 완화하고 싶으면 n_startup_trials 늘리기)\n",
+    "#     study = optuna.create_study(\n",
+    "#         direction=\"minimize\",\n",
+    "#         sampler=optuna.samplers.TPESampler(n_startup_trials=10, multivariate=True, group=True),\n",
+    "#         pruner=optuna.pruners.MedianPruner(n_startup_trials=10),\n",
+    "#     )\n",
+    "\n",
+    "#     # enqueue_trial에 max_bin 넣지 마세요(충돌 유발). 필요하면 alpha 등만.\n",
+    "#     study.enqueue_trial({\n",
+    "#         \"eta\": 0.1,\n",
+    "#         \"max_depth\": 6,\n",
+    "#         \"min_child_weight\": 2,\n",
+    "#         \"subsample\": 0.8,\n",
+    "#         \"colsample_bytree\": 0.8,\n",
+    "#         \"reg_lambda\": 1.0,\n",
+    "#         \"reg_alpha\": 1e-8,\n",
+    "#         \"alpha\": 1.0,      # 커스텀 목적함수 기본 베이스라인\n",
+    "#         # \"max_bin\": 256,   # ← 넣지 말기 (충돌 위험)\n",
+    "#     })\n",
+    "\n",
+    "#     study.optimize(objective, n_trials=60, n_jobs=1)\n",
+    "\n",
+    "#     best_params_dict[building_type] = study.best_params\n",
+    "#     print(f\"==> Best SMAPE for {building_type}: {study.best_value:.4f}\")\n",
+    "#     print(f\"==> Best Params: {study.best_params}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62f037a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 결과 정리\n",
+    "# xgb_best_params = pd.DataFrame.from_dict(best_params_dict, orient='index')\n",
+    "# xgb_best_params.to_csv(\"xgb_best_params_found.csv\", index=True)\n",
+    "# print(\"\\n✅ 저장: xgb_best_params_found.csv\")\n",
+    "# xgb_best_params"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "groom",
    "language": "python",
    "name": "python3"
   },
@@ -354,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
